# schoolconnect-mcp-server

schoolconnect-mcp-server/: README.md  SETUP.md  pyproject.toml  requirements.txt  server.py  test_server.py
schoolconnect-mcp-server/src/: __init__.py
schoolconnect-mcp-server/src/config/: __init__.py  settings.py
schoolconnect-mcp-server/src/integrations/: __init__.py  ai_analysis.py  airtable_client.py  calendar_client.py
schoolconnect-mcp-server/src/shared/: __init__.py  utils.py
schoolconnect-mcp-server/src/tools/: __init__.py  announcements.py  calendar.py  documents.py
